fix alignment on masonry

--- a/pintereach/src/App.css
+++ b/pintereach/src/App.css
@@ -142,11 +142,6 @@ body {
 }
 
 
-.App {
-	width: 100%;
-	margin: 0 auto;
-}
-
 .my-masonry-grid {
 	display: -webkit-box;
 	/* Not needed if autoprefixing */
@@ -154,8 +149,7 @@ body {
 	/* Not needed if autoprefixing */
 	display: flex;
 	/* gutter size offset */
-	width: 80%;
-	margin: 50px auto -30px auto;
+	margin-left: -30px;
 }
 
 .my-masonry-grid_column {
